--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
