--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
@@ -15,7 +17,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,18 +34,18 @@
       "react-app/jest"
     ]
   },
-    "lint-staged": {
-      "src/**/*.{js,jsx,ts,tsx}": [
-        "npm run lint -- --fix",
-        "npm run format",
-        "git add"
-      ]
-    }, 
-      "husky": {
-        "hooks": {
-          "pre-commit": "lint-staged"
-        }
-      },    
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "npm run lint -- --fix",
+      "npm run format",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
