SWR is working now

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,12 @@
     "extends": ["react-app", "prettier"],
     "plugins": ["prettier"],
     "rules": {
-      "prettier/prettier": "error"
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
     }
   }
   
