--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.6",
+    "swr": "^2.2.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
